Change the left side's width

--- a/styles.css
+++ b/styles.css
@@ -7,4 +7,5 @@ body {
 .left_side {
 	background: url("images/guillaume-briard-lSXpV8bDeMA-unsplash.jpg");
 	background-size: cover;
+	width: 33%;
 }
