--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: "Norse Bold";
+	src: url(fonts/Norse-Bold.otf);
+}
+
 body {
 	margin: 0;
 	display: flex;
@@ -8,4 +13,13 @@ body {
 	background: url("images/guillaume-briard-lSXpV8bDeMA-unsplash.jpg");
 	background-size: cover;
 	width: 33%;
+
+	.logo {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background: rgba(0, 0, 0, 40%);
+		height: 140px;
+		margin-top: 35%;
+	}
 }
