--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+:root {
+	--left_font_color: white;
+}
+
+* {
+	box-sizing: border-box;
+}
+
 @font-face {
 	font-family: "Norse Bold";
 	src: url(fonts/Norse-Bold.otf);
@@ -7,12 +15,17 @@ body {
 	margin: 0;
 	display: flex;
 	height: 100vh;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .left_side {
 	background: url("images/guillaume-briard-lSXpV8bDeMA-unsplash.jpg");
 	background-size: cover;
 	width: 33%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 
 	.logo {
 		display: flex;
@@ -21,10 +34,11 @@ body {
 		background: rgba(0, 0, 0, 40%);
 		height: 140px;
 		margin-top: 35%;
+		margin-bottom: 50%;
 
 		span {
 			font-family: "Norse Bold";
-			color: white;
+			color: var(--left_font_color);
 			font-size: 5.5rem;
 		}
 	}
