--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,7 @@ body {
 		justify-content: center;
 		background: rgba(0, 0, 0, 40%);
 		height: 140px;
-		margin-top: 35%;
-		margin-bottom: 50%;
+		margin-top: 190px;
 
 		span {
 			font-family: "Norse Bold";
