--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ body {
 
 	header {
 		flex: 1.2;
-		padding: 100px 90px 40px 40px;
+		padding: 100px 90px 0 40px;
 		font-weight: bold;
 	}
 
@@ -72,5 +72,9 @@ body {
 
 	footer {
 		flex: 1.1;
+	}
+
+	header, footer {
+		background: #f9fafb;
 	}
 }
