--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,20 @@ body {
 
 	section {
 		flex: 1;
+		padding-left: 40px;
+		font-family: 'Roboto', Arial, Helvetica, sans-serif;
+
+		h1 {
+			font-weight: 500;
+		}
+
+		label {
+			text-transform: uppercase;
+			font-size: 0.7rem;
+			color: #414b57;
+			letter-spacing: 1.5px;
+			font-weight: 500;
+		}
 	}
 
 	footer {
