--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body {
 	flex: 1.5;
 
 	header {
-		flex: 1.2;
+		flex: 1;
 		padding: 100px 90px 0 40px;
 		font-weight: bold;
 	}
@@ -74,6 +74,30 @@ body {
 		h1 {
 			font-weight: 500;
 		}
+	
+		.fields {
+			display: flex;
+			flex-direction: column;
+			gap: 1rem;
+
+			.row {
+				display: flex;
+				gap: 3rem;
+
+				.field {
+					display: flex;
+					flex-direction: column;
+					gap: 1px;
+
+					input {
+						border: 1px solid #E5E7EB;
+						border-radius: 3px;
+						height: 1.5rem;
+						width: 200px;
+					}
+				}
+			}
+		}
 
 		label {
 			text-transform: uppercase;
@@ -85,7 +109,7 @@ body {
 	}
 
 	footer {
-		flex: 1.1;
+		flex: 1;
 	}
 
 	header, footer {
