--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 	margin: 0;
 	display: flex;
 	height: 100vh;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 .left_side {
@@ -62,14 +62,18 @@ body {
 
 	header {
 		flex: 1;
-		padding: 100px 90px 0 40px;
-		font-weight: bold;
+		padding: 0 85px 0 40px;
+		font-size: 0.98rem;
+		font-weight: 500;
+
+		p:nth-child(1) {
+			margin-top: 150px;
+		}
 	}
 
 	section {
-		flex: 1;
+		flex: 0.7;
 		padding-left: 40px;
-		font-family: 'Roboto', Arial, Helvetica, sans-serif;
 
 		h1 {
 			font-weight: 500;
