Add box shadow to middle section

--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,8 @@ form {
 		flex: 0.7;
 		padding-left: 40px;
 		border-top: 1px solid #f7f8fa;
+		box-shadow: 3px 5px 6px #e0e1e2;
+		z-index: 1;
 
 		h1 {
 			font-weight: 500;
