--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,15 @@
 	src: url(fonts/Norse-Bold.otf);
 }
 
-body {
+html, body {
+	width: 100%;
+	height: 100%;
 	margin: 0;
+	padding: 0;
+}
+
+body {
 	display: flex;
-	height: 100vh;
 	font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
@@ -76,11 +81,12 @@ form {
 	}
 
 	section {
-		flex: 0.7;
-		padding-left: 40px;
+		flex: 0.9;
+		padding: 0 40px;
 		border-top: 1px solid #f7f8fa;
 		box-shadow: 3px 5px 6px var(--shadow);
 		z-index: 1;
+		height: 100%;
 
 		h1 {
 			font-weight: 500;
