--- a/css/styles.css
+++ b/css/styles.css
@@ -25,179 +25,217 @@ body {
 }
 
 .left_side {
-	background: url("../images/casey-horner-G2jAOMGGlPE-unsplash.jpg");
+    background: url("../images/casey-horner-G2jAOMGGlPE-unsplash.jpg");
 	background-size: cover;
 	flex: 1;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+}
 
-	.logo {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		background: rgba(0, 0, 0, 40%);
-		height: 8.75rem;
-		margin-top: 12rem;
-		padding: 1rem 2rem;
+.logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, 40%);
+    height: 8.75rem;
+    margin-top: 12rem;
+    padding: 1rem 2rem;
+}
 
-		img {
-			width: 5.5rem;
-			height: 7.375rem;
-		}
+.logo img {
+    width: 5.5rem;
+	height: 7.375rem;
+}
 
-		span {
-			font-family: "Norse Bold";
-			color: var(--left_font_color);
-			font-size: 5rem;
-		}
-	}
+.logo span {
+    font-family: "Norse Bold";
+    color: var(--left_font_color);
+    font-size: 5rem;
+}
 
-	.photo_credit {
-		margin-bottom: 15px;
-		font-size: 0.9rem;
-		text-align: center;
-		color: var(--left_font_color);
-		a {
-			color: var(--left_font_color);
-		}
-	}
+.photo_credit {
+    margin-bottom: 15px;
+    font-size: 0.9rem;
+    text-align: center;
+    color: var(--left_font_color);
+}
+
+.photo_credit a {
+    color: var(--left_font_color);
 }
 
 form {
-	display: flex;
+    display: flex;
 	flex-direction: column;
 	flex: 1.5;
-
-	header {
-		flex: 1.5;
-		padding: 0 85px 0 40px;
-		font-size: 0.98rem;
-		font-weight: 500;
-
-		p:nth-child(1) {
-			margin-top: 150px;
-		}
-	}
-
-	section {
-		flex: 1;
-		padding: 0 40px;
-		border-top: 1px solid #f7f8fa;
-		box-shadow: 3px 5px 6px var(--shadow);
-		z-index: 1;
-		height: 100%;
-
-		h1 {
-			font-weight: 500;
-			font-size: 1.1rem;
-		}
-	
-		.fields {
-			display: flex;
-			flex-direction: column;
-			gap: 1rem;
-
-			.row {
-				display: flex;
-				gap: 3rem;
-
-				.field {
-					display: flex;
-					flex-direction: column;
-					gap: 1px;
-
-					input {
-						border: 1px solid #E5E7EB;
-						border-radius: 3px;
-						height: 1.5rem;
-						width: 200px;
-						padding-left: 10px;
-					}
-
-					input:focus {
-						outline: none;
-						border-color: #1d4ed8;
-						box-shadow: 2px 3px 3px var(--shadow);
-					}
-
-					.error {
-						border-color: #bd2a2a;
-					}
-
-					.error_message {
-						color: #bd2a2a;
-						font-size: 13px;
-					}
-				}
-			}
-		}
-
-		label {
-			text-transform: uppercase;
-			font-size: 0.7rem;
-			color: #414b57;
-			letter-spacing: 1.5px;
-			font-weight: 500;
-		}
-	}
-
-	footer {
-		flex: 1.5;
-		padding: 30px 0 0 40px;
-
-		button {
-			appearance: none;
-			border: none;
-			background-color: #008ca2;
-			border-radius: 4px;
-			padding: 0.6rem 2.1rem;
-			color: var(--left_font_color);
-			margin-bottom: 15px;
-			font-weight: 600;
-			cursor: pointer;
-		}
-
-		p {
-			font-size: 0.9rem;
-
-			a {
-				color: #008ca2;
-				font-weight: 600;
-				text-decoration: none;
-			}
-		}
-	}
-
-	header, footer {
-		background: #f9fafb;
-	}
 }
 
-@media only screen and (max-width: 790px) {
+header {
+    flex: 1.5;
+    padding: 0 85px 0 40px;
+    font-size: 0.98rem;
+    font-weight: 500;
+}
+
+header p:nth-child(1) {
+    margin-top: 9.375rem;
+}
+
+section {
+    flex: 1;
+    padding: 0 40px;
+    border-top: 1px solid #f7f8fa;
+    box-shadow: 3px 5px 6px var(--shadow);
+    z-index: 1;
+    height: 100%;
+}
+
+section h1 {
+    font-weight: 500;
+    font-size: 1.1rem;
+}
+
+.fields {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.row {
+    display: flex;
+	gap: 3rem;
+}
+
+.field {
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+}
+
+.field input {
+    border: 1px solid #E5E7EB;
+    border-radius: 3px;
+    height: 1.5rem;
+    width: 200px;
+    padding-left: 10px;
+}
+
+.field input:focus {
+    outline: none;
+    border-color: #1d4ed8;
+    box-shadow: 2px 3px 3px var(--shadow);
+}
+
+.error {
+    border-color: #bd2a2a;
+}
+
+.error_message {
+    color: #bd2a2a;
+    font-size: 13px;
+}
+
+label {
+    text-transform: uppercase;
+    font-size: 0.7rem;
+    color: #414b57;
+    letter-spacing: 1.5px;
+    font-weight: 500;
+}
+
+footer {
+    flex: 1.5;
+	padding: 30px 0 0 40px;
+}
+
+footer button {
+    appearance: none;
+    border: none;
+    background-color: #008ca2;
+    border-radius: 4px;
+    padding: 0.6rem 2.1rem;
+    color: var(--left_font_color);
+    margin-bottom: 15px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+footer p {
+    font-size: 0.9rem;
+}
+
+footer p a {
+    color: #008ca2;
+    font-weight: 600;
+    text-decoration: none;
+}
+
+header, footer {
+    background: #f9fafb;
+}
+
+@media only screen and (max-width: 810px) {
 	html {
 		font-size: 13px;
 	}
 
+    body {
+        flex-direction: column;
+    }
+
+    .logo {
+        margin-top: 4rem;
+        height: 5.7rem;
+        padding: 1rem 2rem;
+    }
+    
+    .logo img {
+        width: 44px;
+        height: 59px;
+    }
+    
+    .logo span {
+        font-size: 3rem;
+    }
+
+    .left_side {
+        flex: 0.5;
+    }
+
 	header {
-		flex: 1;
+		padding-bottom: 1rem;
 	}
+
+    header p:nth-child(1) {
+        margin-top: 5rem;
+    }
 
 	section {
 		flex: 2;
-
-		.fields {
-			padding: 2rem 0;
-
-			.row {
-				gap: 1rem !important;
-				flex-direction: column;
-			}
-		}
+        padding-top: 1rem;
 	}
+
+    section h1 {
+        text-align: center;
+    }
+
+    .fields {
+        padding: 2rem 0;
+        align-items: center;
+    }
+
+    .row {
+        gap: 1rem !important;
+        flex-direction: column;
+    }
 
 	footer {
 		flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-left: 0;
 	}
 }
